--- a/src/frontend/src/style/App.css
+++ b/src/frontend/src/style/App.css
@@ -1,4 +1,65 @@
-
 .App {
     display: flex;
+    position: relative;
+}
+
+.sidebar {
+    position: absolute;
+    z-index: 5;
+    width: 50px;
+    height: calc(100vh - 10px);
+    padding: 5px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    background-color: #1154a1;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    text-align: center;
+}
+
+.sidebar .open-wording{
+    color: yellow;
+    font-size: 2.1rem;
+}
+
+.sidebar .close-wording{
+    color: #67ff49;
+    font-size: 2.1rem;
+}
+
+/* .sidebar-toggle {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 1rem;
+    cursor: pointer;
+} */
+
+.left-side {
+    position: absolute;
+    z-index: 4;
+    top: 0;
+    left: 0;
+    /* left: 50px; */
+    width: 28vw;
+    height: 98.5vh;
+    background-color: #f5f5f5;
+    box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+    transition: transform 0.5s ease-in-out; /* Ensure smooth transition */
+    /* transform: translateY(-100%); */
+    transform: translateX(-100%);
+}
+
+.left-side.open {
+    /* transform: translateY(0); */
+    transform: translateX(60px);
+}
+
+.right-side {
+    padding-left: 60px;
+    width: calc(100vw - 60px);
 }
