--- a/src/frontend/src/style/ClusterCheckboxes.css
+++ b/src/frontend/src/style/ClusterCheckboxes.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     /* gap: 10px; */
-    border-right: 1px solid #ccc;
+    /* border-right: 1px solid #ccc; */
     padding: 20px 30px;
     /* border-radius: 5px; */
     height: 95vh;
@@ -62,7 +62,7 @@
 .hospital-column {
     display: flex;
     flex-wrap: wrap;
-    gap: 16px 40px;
+    gap: 12px 35px;
     flex: 1;
 }
 
@@ -76,10 +76,12 @@ label {
     display: flex;
     align-items: center;
     gap: 5px;
+    cursor: pointer;
 }
 
 input[type="checkbox"] {
     margin: 0;
+    cursor: pointer;
 }
 
 /* 
@@ -89,7 +91,7 @@ buttons
     display: flex;
     flex-direction: row;
     gap: 40px;
-    margin-top: 10px;
+    margin-top: 20px;
     font-size: 1rem;
 }
 
