--- a/src/frontend/src/style/ForwarderVer2.css
+++ b/src/frontend/src/style/ForwarderVer2.css
@@ -75,6 +75,14 @@ tr:nth-child(odd) td {
     background-color: #f9f9f9;
 }
 
+tr:hover td {
+    background-color:aqua;
+}
+
+.results .row-selected td {
+    background-color: yellow;
+}
+
 td:first-child, th:first-child {
     font-size: 0.9rem;
     font-weight: bold;
